Test multiple security

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-jwt.secret=monstarlab
+jwt.secret=bW9uc3RhcmxhYg==
 spring.datasource.url=jdbc:mysql://localhost:3306/springboot?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456789
@@ -7,3 +7,4 @@ import.sql.init.mode=always
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=none
 spring.main.allow-circular-references=true
+spring.main.allow-bean-definition-overriding=true
