--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=none
 spring.main.allow-circular-references=true
 spring.main.allow-bean-definition-overriding=true
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
